--- a/4/index.html
+++ b/4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
 
 <body>
